network-policy/netproj-b-deny-all-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default
spec:
  podSelector: null
  ingress:
    - from:
        - podSelector: {}
